<resources>
    <string name="app_name">Garage</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- Strings de Acessibilidade -->
    <!-- home -->
    <string name="botao_creditos">Botão creditos</string>
    <string name="botao_jogar">Botão jogar</string>
    <string name="botao_loja">Botão loja</string>
    <string name="botao_trofeus">Botão trofeus</string>

    <!-- loja & garagem -->
    <string name="botao_freio">Botão freio</string>
    <string name="botao_turbo">Botão turbo</string>
    <string name="botao_motor">Botão motor</string>
    <string name="botao_pneu">Botão pneu</string>
    <string name="botao_pistao">Botão pistão</string>
    <string name="peca_amadora">Peça nível amador</string>
    <string name="peca_itermediaria">Peça nível intermediario</string>
    <string name="peca_profissional">Peça nível profissional</string>


    <!-- garagem -->
    <string name="botao_home">Botão home</string>
    <string name="botao_mapa">Botão mapa</string>
    <string name="carro_azul">Carro azul</string>
    <string name="carro_verde">Carro verde</string>
    <string name="carro_amarelo">Carro amarelo</string>
    <string name="carro_vermelho">Carro vermelho</string>
    <string name="seta_direita">Seta para direita</string>
    <string name="seta_esquerda">Seta para esquerda</string>

    <!-- Geral -->
    <string name="botao_voltar">Botão voltar</string>
</resources>
