<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_loja"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_loja">

    <ImageButton
        android:id="@+id/loja_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:background="@drawable/botao_voltar"
        android:contentDescription="@string/botao_voltar" />

    <ImageButton
        android:id="@+id/loja_pneu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/botao_pneu"
        android:contentDescription="@string/botao_pneu" />

    <ImageButton
        android:id="@+id/loja_turbo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/loja_freio"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_toEndOf="@+id/loja_pneu"
        android:layout_toRightOf="@+id/loja_pneu"
        android:background="@drawable/botao_turbo"
        android:contentDescription="@string/botao_turbo" />

    <ImageButton
        android:id="@+id/loja_motor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loja_pistao"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_toEndOf="@+id/loja_freio"
        android:layout_toRightOf="@+id/loja_freio"
        android:background="@drawable/botao_motor"
        android:contentDescription="@string/botao_motor" />

    <ImageButton
        android:id="@+id/loja_freio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/loja_pneu"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_toEndOf="@+id/loja_turbo"
        android:layout_toRightOf="@+id/loja_turbo"
        android:background="@drawable/botao_freio"
        android:contentDescription="@string/botao_freio" />

    <ImageButton
        android:id="@+id/loja_pistao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loja_freio"
        android:layout_alignEnd="@+id/loja_voltar"
        android:layout_alignRight="@+id/loja_voltar"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:background="@drawable/botao_pistao"
        android:contentDescription="@string/botao_pistao" />


    <ImageButton
        android:id="@+id/loja_peca_amadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loja_pneu"
        android:layout_alignStart="@+id/loja_pneu"
        android:layout_alignTop="@+id/loja_peca_intermediaria"
        android:background="@drawable/campo_loja"
        android:contentDescription="@string/peca_amadora"
        android:src="@drawable/freio_basic"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/loja_peca_profissional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loja_pistao"
        android:layout_alignRight="@+id/loja_pistao"
        android:layout_below="@+id/loja_motor"
        android:layout_marginTop="46dp"
        android:background="@drawable/campo_loja"
        android:contentDescription="@string/peca_profissional"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/loja_peca_intermediaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/loja_peca_profissional"
        android:layout_centerHorizontal="true"
        android:background="@drawable/campo_loja"
        android:contentDescription="@string/peca_itermediaria"
        android:visibility="gone" />

</RelativeLayout>